# Projekt3x

./: CMakeLists.txt  Raport.ipynb  main.cpp  setup.py
src/: main.cpp
